Minor changes to extracurriculars/leadership

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -408,43 +408,51 @@
         <div class="popup-content">
             <span class="close" onclick="closePopup('guidingeyes')">&times;</span>
             <h1 class="popup-title">Cornell Guiding Eyes Member</h1>
-            <p>As a member of Cornell Guiding Eyes, I am part of a program dedicated to raising and training guide dogs
-                that assist individuals with visual impairments. My role involves supporting various stages of the dogs'
-                development, with a primary focus on socializing them and preparing them for their critical
-                responsibilities as service animals.</p>
-            <p>My responsibilities include introducing the dogs to a wide range of environments and situations, such as
-                campus settings, public spaces, and interactions with people. This exposure helps the dogs build
-                confidence and adaptability, ensuring they are well-prepared for the real-world scenarios they will
-                encounter as guide dogs. Through this work, I have developed a deep appreciation for the transformative
-                impact these animals have on enhancing accessibility and independence for visually impaired individuals.
-            </p>
-            <p>Being involved with Cornell Guiding Eyes allows me to make a meaningful contribution to a life-changing
-                cause while strengthening my skills in patience, responsibility, and collaboration. This experience has
-                reinforced my commitment to community service and highlighted the importance of creating inclusive,
-                supportive environments where everyone can thrive.</p>
+            <p>As a member of Cornell Guiding Eyes, I contribute to a program focused on raising and training guide dogs
+                to assist individuals with visual impairments. My role includes supporting various stages of the dogs'
+                development, with an emphasis on socializing them and preparing them for their future responsibilities
+                as service animals.</p>
+            <p>My work involves exposing the dogs to a variety of environments and situations, including campus
+                settings,
+                public spaces, and interactions with people. These experiences help the dogs build confidence and
+                adaptability, ensuring they are ready for the real-world challenges they will face as guide dogs.
+                Through
+                this, I’ve gained a deep appreciation for the profound impact these animals have in improving
+                accessibility
+                and independence for visually impaired individuals.</p>
+            <p>My involvement with Cornell Guiding Eyes stems from a longstanding passion for working with service
+                animals,
+                which began during high school when I volunteered at the Guide Dog Foundation. Continuing this work in
+                college has deepened my dedication to programs that empower individuals with visual impairments and
+                strengthened my belief in the vital role guide dogs play in fostering independence and inclusion.</p>
+            <p>Being part of Cornell Guiding Eyes allows me to contribute to a life-changing cause while enhancing my
+                skills
+                in patience, responsibility, and teamwork. This experience has reinforced my commitment to community
+                service and highlighted the importance of creating inclusive, supportive environments where everyone can
+                thrive.</p>
+
+
         </div>
     </div>
     <div class="popup" id="swe1">
         <div class="popup-content">
             <span class="close" onclick="closePopup('swe1')">&times;</span>
             <h1 class="popup-title">Society of Women Engineers Fundraising (SWE) Committee Member</h1>
-            <p>As a member of the Society of Women Engineers (SWE) Fundraising Committee, I actively contributed to
-                advancing initiatives that support women in engineering. My role focused on organizing and managing
-                creative fundraising events to provide essential resources for SWE’s programs, outreach efforts, and
-                scholarships.</p>
-            <p>I worked closely with team members to brainstorm and implement successful fundraisers, such as partnering
-                with local restaurants, organizing student care package sales, and coordinating donut sale fundraisers.
-                These events not only raised significant funds but also helped engage the broader campus community in
-                SWE’s mission to empower women in STEM fields.</p>
-            <p>Beyond planning events, I handled logistics, including securing venues, managing budgets,
-                and promoting fundraisers. This required effective teamwork
-                and strong communication to ensure that each event was well-executed and met its financial goals.</p>
-            <p>This experience allowed me to develop valuable skills in event planning, problem-solving, and
-                collaboration while making a meaningful impact on SWE’s ability to offer scholarships, professional
-                development, and outreach programs. Being part of the fundraising committee also gave me a deeper
-                appreciation for the role of fundraising in supporting initiatives that inspire and empower the next
-                generation of women engineers.</p>
-
+            <p>As a member of the Society of Women Engineers (SWE) Fundraising Committee, I played an active role in
+                supporting initiatives that advance women in engineering. My responsibilities included organizing and
+                managing creative fundraising events that provided critical resources for SWE’s programs, outreach
+                activities, and scholarships.</p>
+            <p>I collaborated closely with team members to brainstorm and implement successful fundraisers, such as
+                partnering with local restaurants, selling student care packages, and coordinating donut sales. These
+                events not only generated significant funds but also engaged the broader campus community in SWE’s
+                mission to empower women in STEM.</p>
+            <p>In addition to planning events, I managed logistics such as securing venues, overseeing budgets, and
+                promoting fundraisers through digital and in-person outreach. This required strong teamwork and clear
+                communication to ensure each event was executed smoothly and achieved its financial goals.</p>
+            <p>This experience helped me develop practical skills in event planning, problem-solving, and collaboration
+                while contributing to SWE’s ability to provide scholarships, professional development opportunities, and
+                outreach programs. Being part of the committee deepened my understanding of how effective fundraising
+                can support meaningful initiatives that inspire and uplift the next generation of women engineers.</p>
         </div>
     </div>
     <div class="popup" id="cuemp">
