--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -80,7 +80,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             background-color: #1C2E4A;
-            color: white;
+            color: #d3d3d3;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
             z-index: 1000;
             border-radius: 10px;
